--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
             <version>1.2.17</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>io.dropwizard.metrics</groupId>
+            <artifactId>metrics-core</artifactId>
+            <version>3.1.2</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
