--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,12 @@
             <artifactId>metrics-core</artifactId>
             <version>3.1.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.solr</groupId>
+            <artifactId>solr-solrj</artifactId>
+            <version>5.3.0</version>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
